<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EU Quizz</string>
    <string name="welcome_text">Welcome to EU Quizz!<xliff:g id="toline">\n</xliff:g>You can test your knowledge about the European Union with <xliff:g example="10" id="number_of_questions">10</xliff:g> questions.<xliff:g id="toline">\n</xliff:g>Can you get all the right answers?</string>
    <string name="your_score_is_points">Your score is: 0 points</string>
    <string name="start">Start</string>
    <string name="question">Question #</string>
    <string name="question_text_can_take_up_to_4_lines">Question text can take up to 4 lines</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="result">Result</string>
    <string name="next">Next</string>
    <string name="perfect">Perfect!</string>
    <string name="perfect_comment">You know everything on the European Union.  Can you do it again?</string>
    <string name="very_good">Very Good!</string>
    <string name="very_good_comment">You know a lot on the European Union.  Can you do even better?</string>
    <string name="good">Good!</string>
    <string name="good_comment">You know a bit on the European Union.  Can you do better?</string>
    <string name="can_do_better">You can do better!</string>
    <string name="can_do_better_comment">You know little on the European Union.  Want to try again?</string>
    <string name="score">Your score: <xliff:g example="10" id="score">%s</xliff:g> </string>
    <string name="play_again">Play Again</string>
    <string name="right">Right!</string>
    <string name="wrong">Wrong!</string>
    <string name="question_number">Question <xliff:g example="1" id="question_number">%s</xliff:g></string>
</resources>
