<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileSwitcher"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.android.euquizz.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/european_union_flag_background" />

        <TextView
            android:id="@+id/eu_quizz_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eu_quizz_score_textview"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/eu_quizz_title_textview"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:text="@string/your_score_is_points"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/eu_quizz_message_textview"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/eu_quizz_score_textview"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:onClick="clickStart"
            android:text="@string/start"
            android:textAllCaps="false" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/european_union_flag_background" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/question"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/question_textview"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/question_text_can_take_up_to_4_lines"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/answer1_button"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:onClick="clickAnswer"
                        android:tag="1"
                        android:text="@string/answer_1"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/answer2_button"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:onClick="clickAnswer"
                        android:tag="2"
                        android:text="@string/answer_2"
                        android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/answer3_button"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:onClick="clickAnswer"
                        android:tag="3"
                        android:text="@string/answer_3"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/answer4_button"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:onClick="clickAnswer"
                        android:tag="4"
                        android:text="@string/answer_4"
                        android:textAllCaps="false" />
                </LinearLayout>

                <TextView
                    android:id="@+id/result_textview"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textSize="30sp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:onClick="clickNext"
            android:text="@string/next" />
    </RelativeLayout>


</ViewSwitcher>